# gstreamerTest

./: CMakeLists.txt  deepstream_infer_tensor_meta_test.cpp  dsclassification_sgie_config.txt  dsdetect_pgie_config.txt  dstest1_pgie_config.txt  main.cpp
